Andreas's abstract edit

--- a/acl2019.tex
+++ b/acl2019.tex
@@ -48,7 +48,13 @@
 \maketitle
 \begin{abstract}
   % Automatic summarization research has made substantial progress thanks to novel methods and datasets. Manual evaluation approaches so far either ignore content and focus on fluency, or require expert annotators but nevertheless suffer from low inter-annotator agreement due to the complexity of the task. In the few cases where the contents of the summary are evaluated, the evaluation is biased due to using a single reference summary, which results in different summaries of equal quality being rated according to their similarity to the reference. In this paper, we propose a Highlight-bAsed Evaluation of Single document Summarization (HArnESS). Our proposal assesses summaries against the original document, facilitated through manually highlighted salient content which can be reused in future studies. Furthermore it does not require expert annotators, avoids reference bias and provides absolute instead of ranked evaluation of systems.
-  Automatic summarization research has made substantial progress thanks to novel methods and datasets. However, a well-accepted manual evaluation for content such as Pyramid requires expert annotation which is often not available for many datasets. As such, current practices choose to assess the content by directly comparing the summary against the original document or a reference summary. Our finding found that these practices are not suitable for long document or dataset that only provides a single reference summary per document as these cases are often result in scores that have high variability between judges' assesment due to bias. We propose a Highlight-bAsed Evaluation of Single document Summarization (HArnESS) that provide assesment of a summary against the original document, facilitated through manually highlighted salient content which lower the coefficient of variability of judges' assesment and is reuseable in future studies. Furthermore it does not require expert annotators, avoids reference bias and provides absolute instead of ranked evaluation of systems.
+  Automatic summarization research has made substantial progress thanks to novel methods and datasets. 
+  %OLD:
+  %However, a well-accepted manual evaluation for content such as Pyramid requires expert annotation which is often not available for many datasets. As such, current practices choose to assess the content by directly comparing the summary against the original document or a reference summary. 
+  %Our finding found that these practices are not suitable for long document or dataset that only provides a single reference summary per document as these cases are often result in scores that have high variability between judges' assessment due to bias. 
+  %AV: I would replace the 3 sentences above with something like: 
+  Despite this progress, most manual evaluation focuses on fluency but not on the content of the summaries. Those that do, typically use a single reference summary for comparison, either directly or through questions, which introduces a bias towards a single correct answer for a task where this assumption doesn't hold.
+  To address this issue, we propose Highlight-bAsed Evaluation of Single document Summarization (HArnESS) that provides assessment of a summary against the original document, facilitated through manually highlighted salient content. The highlights lower the variability of the judges' assessment and are reusable in future studies. Furthermore it does not require expert annotators, avoids reference bias and provides absolute instead of ranked evaluation of the systems.
   
 \end{abstract}
 
